--- a/04-C-zero-data.Rmd
+++ b/04-C-zero-data.Rmd
@@ -1,13 +1,13 @@
 ---
 layout: topic
-title: "Linear models"
+title: "GLM with zero-inflated data"
 author: Tad
 output: html_document
 ---
 
 **Assigned Reading:**
 
-> Appendix A from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. *Mixed Effects Models and Extensions in Ecology with R.* Springer. [link](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6)
+> Chapter 11 from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. *Mixed Effects Models and Extensions in Ecology with R.* Springer. [link](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6)
 
 
 ```{r include = FALSE}
@@ -30,7 +30,7 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
-+ Learn linear models
+
 
 ### Analysis Example
 
