--- a/08-A-spatial-autocorrelation.Rmd
+++ b/08-A-spatial-autocorrelation.Rmd
@@ -1,13 +1,16 @@
 ---
 layout: topic
-title: "Linear models"
-author: Tad
+title: "Spatial autocorrelation"
+author: Jes
 output: html_document
 ---
 
 **Assigned Reading:**
 
-> Appendix A from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. *Mixed Effects Models and Extensions in Ecology with R.* Springer. [link](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6)
+> Chapters 6 & 7 from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. *Mixed Effects Models and Extensions in Ecology with R.* Springer. [link](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6)
+
+**Additional References:**
+
 
 
 ```{r include = FALSE}
@@ -30,7 +33,7 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
-+ Learn linear models
+
 
 ### Analysis Example
 
