--- a/08-B-spatial-filters.Rmd
+++ b/08-B-spatial-filters.Rmd
@@ -1,13 +1,14 @@
 ---
 layout: topic
-title: "Linear models"
-author: Tad
+title: "Spatial filters"
+author: Jes
 output: html_document
 ---
 
 **Assigned Reading:**
 
-> Appendix A from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. *Mixed Effects Models and Extensions in Ecology with R.* Springer. [link](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6)
+> Chapter 7 from: Borcard, D., Gillet, F. and Legendre, P. 2011. *Numerical Ecology with R.* Springer. [link](https://link.springer.com/book/10.1007/978-1-4419-7976-6)
+
 
 
 ```{r include = FALSE}
@@ -30,7 +31,7 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
-+ Learn linear models
+
 
 ### Analysis Example
 
