--- a/08-A-spatial-regression.Rmd
+++ b/08-A-spatial-regression.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: topic
-title: "Spatial autocorrelation"
+title: "Spatial regression"
 author: Jes
 output: html_document
 ---
@@ -9,8 +9,11 @@ output: html_document
 
 > Chapters 6 & 7 from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. *Mixed Effects Models and Extensions in Ecology with R.* Springer. [link](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6)
 
-**Additional References:**
+**Optional Readings:**
 
+> Beale, C. M., Lennon, J. J., Yearsley, J. M., Brewer, M. J. and Elston, D. A. 2010. Regression analysis of spatial data. *Ecology Letters* **13**: 246-264. [DOI: 10.1111/j.1461-0248.2009.01422.x](http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)
+>
+> Hawkins, B. A. 2012. Eight (and a half) deadly sins of spatial analysis. *Journal of Biogeography* **39**: 1-9. [DOI: 10.1111/j.1365-2699.2011.02637.x](http://dx.doi.org/10.1111/j.1365-2699.2011.02637.x)
 
 
 ```{r include = FALSE}
@@ -33,7 +36,7 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
-
++ Spatial dependence can be induced and modeled in several ways.
 
 ### Analysis Example
 
