--- a/08-C-mapping.Rmd
+++ b/08-C-mapping.Rmd
@@ -1,13 +1,19 @@
 ---
 layout: topic
-title: "Spatial filters"
+title: "Visualizing spatial data"
 author: Jes
 output: html_document
 ---
 
 **Assigned Reading:**
 
-> Chapter 7 from: Borcard, D., Gillet, F. and Legendre, P. 2011. *Numerical Ecology with R.* Springer. [link](https://link.springer.com/book/10.1007/978-1-4419-7976-6)
+> Chapter 3 from: Bivand, R. S., Pebesma, E., Gomez-Rubio, V. 2013. *Applied Spatial Data Analysis with R*, 2nd ed. Springer. [Stanford Full Text](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-1-4614-7618-4)
+
+**Suggested Reading:**
+
+> Chapters 2 and 8 from: Bivand, R. S., Pebesma, E., Gomez-Rubio, V. 2013. *Applied Spatial Data Analysis with R*, 2nd ed. Springer. [Stanford Full Text](https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-1-4614-7618-4)
+>
+> *Chapter 2 is an overview of how R handles spatial data. Chapter 8 is useful for mapping model-based spatial predictions.*
 
 
 
