--- a/01-B-Rmarkdown-intro.Rmd
+++ b/01-B-Rmarkdown-intro.Rmd
@@ -139,8 +139,8 @@ To render an Rmd document in Rstudio, click the 'Knit' button at the top of the 
 
 > **Exercise:**
 > 
-> 1. Render the Introduction to R Rmd file to an html file in RStudio by clicking the Knit button.
-> 2. Use your file browser to locate the html file that was generated. Open it with your browser- what do you see? How does it differ from what is displayed [on the course website](https://fukamilab.github.io/BIO202/01-A-R-intro.html)?
+> 1. Render the example lesson Rmd file to an html file in RStudio by clicking the Knit button.
+> 2. Use your file browser to locate the html file that was generated. Open it with your browser- what do you see? How does it differ from what is displayed [on the course website](https://fukamilab.github.io/BIO202/00-example-lesson.html)?
 > 3. Now open the html file with a text editor (emacs, notepad). What do you see?
 
 #### Code chunk options
@@ -149,12 +149,16 @@ The way that pandoc displays the contents and output of code chunks is determine
 
 This [reference guide](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf) has a good overview of what the different options will do.
 
-Look at the first code chunk in the Introduction to R Rmd document where the global options are set. This code block demonstrates 3 global options that apply to all following code chunks in the document: `knitr::opts_chunk$set()`. It also shows how you would apply an options to a single code chunk in the brackets at the start of the chunk: `{r include = FALSE}`, so that this chunk is not shown in the resulting html document, even though it is evaluated.
+Look at the first code chunk in the example lesson Rmd document where the global options are set. This code block demonstrates 3 global options that apply to all following code chunks in the document: `knitr::opts_chunk$set()`. It also shows how you would apply an options to a single code chunk in the brackets at the start of the chunk: `{r include = FALSE}`, so that this chunk is not shown in the resulting html document, even though it is evaluated.
+
+> **Exercise:** 
+>
+> What other chunk options do you see in the example lesson Rmd file? What do they do? (Hint: You can figure it out by removing them and rendering the document.) 
+
 
 #### Figures
 
 Any figure that you make in a code chunk will by default be saved as separate files in your working directory and then imported into the final document created by `pandoc`. In our class webpages, the first code chunk specifies: `knitr::opts_chunk$set(fig.path = "images/")`, which tells `knitr` that it should save any figures generated with code chunks to a folder named "images" within the working directory. The image files will be named according the the name of the code chunk from which they are generated. Hence, it is a good idea to separate analyses into separate code chunks and give them somewhat descriptive names. R markdown can also automatically number and caption your figures and tables. The [`captioner`](https://cran.r-project.org/web/packages/captioner/vignettes/using_captioner.html) package is particularly useful for this.
-
 
 > **Exercise:**
 >
